fixed wrapping

--- a/style.css
+++ b/style.css
@@ -55,13 +55,18 @@ h2 {
 }
 a {
   font-size: 10px;
+  text-align: center;
+  color: #8338ec;
 }
 h3{
   text-align: center;
   color: #8338ec;
 }
-.weather-app {
+.weather-wrapping {
   max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
   background-image: url("https://images.unsplash.com/photo-1464618663641-bbdd760ae84a?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1350&q=80");
   margin: 30px auto;
   padding: 20px;
